--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-start
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UFO Finder</title>
+    <!--link to Bootstrap CDN-->
+    <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous"
+    />
+    <!--link to external CSS file-->
+    <link rel="stylesheet" href="static/css/style.css">
+</head>
+<!--Apply a dark background to the entire page-->
+<body class="bg-dark">
+    <!--Add navbar component-->
+    <div class="wrapper">
+        <!--Make navbar responsive and apply a dark background with light lettering-->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <a class="navbar-brand" href="index.html">UFO Sightings</a>
+        </nav>
+    </div>
+    <!--Add Jumbotron component-->
+    <div class="jumbotron">
+        <!--Change the jumbotron font style and size-->
+        <h1 class="display-4">The Truth Is Out There</h1>
+    </div>
+    <!--Setup Grid System for Article Title & Paragraph-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <!--Add text for Article Title-->
+                <h3>UFO Sightings: Fact or Fancy? <small>Ufologists Weigh In</small></h3>
+            </div>
+            <div class="col-md-8">
+                <!--Add Article Paragraph text-->
+                <p>
+                    Are we alone in the universe? For millennia, humans have turned to the sky to answer 
+                    this question. Now, thanks to research generously funded by W. Avy, a UFO-enthusiast 
+                    and amateur ufologist, we can supplement our sky-searching with data analysis.<br>
+                    <br>"The release of this analysis is well-timed: It coincides with the celebration 
+                    of World UFO Day, which is a moment for ufologists around the world to connect, relax, 
+                    and sample a range of UFO-themed snacks," said Dr. Ursula F. Olivier, the world's 
+                    preeminent expert on circular sightings. "Citizen-scientists can be especially helpful 
+                    in both cataloguing sightings—which is hugely helpful for us in our search for 
+                    aliens—and in helping us celebrate the work that has already been done, such as this 
+                    data visualization project, which will help us raise awareness of the ubiquity of 
+                    sightings!"<br>
+                    <br>Not everyone is ready to celebrate, however. Local CEO and vocal anti-alien activist 
+                    V. Isualize reached out to our reporters to go on record as firmly opposed to any attempts 
+                    to provide access to this data. "If there are aliens, they certainly would like to be left 
+                    alone," she stated, before directing us to the Leave Aliens Alone (LAA) community 
+                    engagement initiative she founded and funds.<br>
+                    <br>So what do YOU think? Are we alone in the universe? Are aliens trying to contact us, 
+                    or do they want to be left alone? Dig through the data yourself, and let us know what 
+                    you see.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!--Setup Grid System for Filter & Data Table-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
+                <!--Add form to take user inputs and make background dark-->
+                <form class="bg-dark">
+                    <p>Filter Search</p>
+                    <!--user input fields-->
+                    <ul class="list-group bg-dark">
+                        <li class="list-group-item bg-dark">
+                            <!--date input-->
+                            <label for="date">Enter Date</label>
+                            <!--Look for text as input and filter by datetime id-->
+                            <input type="text" placeholder="1/10/2010" id="datetime" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <!--city input-->
+                            <label for="city">Enter City</label>
+                            <!--Look for text as input and filter by city id-->
+                            <input type="text" placeholder="madison" id="city" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <!--state input-->
+                            <label for="state">Enter State</label>
+                            <!--Look for text as input and filter by state id-->
+                            <input type="text" placeholder="wi" id="state" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <!--country input-->
+                            <label for="country">Enter Country</label>
+                            <!--Look for text as input and filter by country id-->
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <!--shape input-->
+                            <label for="shape">Enter Shape</label>
+                            <!--Look for text as input and filter by shape id-->
+                            <input type="text" placeholder="ex: light, circle, triangle, unknown" id="shape" />
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            <!--Setup HTML table-->
+            <div class="col-md-9">
+                <!--Give the HTML table slightly striped table styling-->
+                <table class="table table-striped">
+                    <thead>
+                        <!--Display everything nested as a row of data-->
+                        <tr>
+                            <!--Add each column header-->
+                            <th>Date</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Country</th>
+                            <th>Shape</th>
+                            <th>Duration</th>
+                            <th>Comments</th>
+                        </tr>
+                    </thead>
+                    <tbody>                        
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!--Add script to link D3 and listen for user input-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <!--Add script to link data and load the data-->
+    <script src="static/js/data.js"></script>
+    <!--Add scripts to filter data based on user input-->
+    <script src="static/js/app.js"></script>
+</body>
+</html>
